# coin-on-selenium

./: .dockerignore  .env-sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
coin_in_selenium/: __init__.py  app.py
coin_in_selenium/resources/: portfolio.py  protonmail.py  report.py  telegram.py
